2004-06-07  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-hierarchy-favorites.c (remove_folder):
	Removing ESources with favorite folder deletion.
	This would be removed with code reorganization (#59168).

2004-06-04  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (remove_esource):
	Checking for absolute URI only for contact folders.
	Fixes #59547

2004-06-04  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2004-06-03  Dan Winship  <danw@novell.com>

	* storage/xc-backend-view.c (xc_backend_view_new): Put the
	treeview into a scrolled window, so it doesn't go all wacky if
	it's empty. #59009

	* storage/exchange-account.c (exchange_account_connect): Redo this
	a bit; use a "connecting" flag rather than holding the lock the
	whole time. This probably breaks other things, but it prevents a
	deadlock when the exchnage component and the mail component both
	try to connect at the same time.

2004-06-03  Dan Winship  <danw@novell.com>

	* configure.in: Bump version to 1.5.9

	* acinclude.m4 (EVO_LDAP_CHECK): Fix this so it works with
	non-Ximian OpenLDAP packages. (Problem noted by Frederic Crozat)

2004-06-03  Dan Winship  <danw@novell.com>

	* component/*: Gone. Now that we're not using the other
	components' controls to display things, there is no need for the
	shlib proxy. (We still can't move everything into the shlib,
	because then there would be multiple active copies of the exchange
	backend in some cases, and the code is not currently set up to
	deal with that possibility.)
	
	* Makefile.am (SUBDIRS): Remove component

	* configure.in (AC_OUTPUT): Likewise

	* addressbook/Makefile.am (INCLUDES): Remove -I../component

	* addressbook/e-book-backend-exchange.c
	(e_book_backend_exchange_connect): s/xc_backend/exchange_component/

	* addressbook/e-book-backend-gal.c (gal_connect): Likewise

	* calendar/Makefile.am (INCLUDES): Remove -I../component
