@@ -1,32 +1,0 @@
-<gconfschemafile>
-  <schemalist>
-
-    <!-- Name of currently-configured account -->
-
-    <schema>
-      <key>/schemas/apps/evolution/exchange/configured_account</key>
-      <applyto>/apps/evolution/exchange/configured_account</applyto>
-      <owner>evolution-exchange-storage</owner>
-      <type>string</type>
-      <default/>
-      <locale name="C">
-        <short>Name of the configured Exchange account</short>
-      </locale>
-    </schema>
-
-    <!-- Information about delegator accounts -->
-
-    <schema>
-      <key>/schemas/apps/evolution/exchange/delegators</key>
-      <applyto>/apps/evolution/exchange/delegators</applyto>
-      <owner>evolution-exchange-storage</owner>
-      <type>list</type>
-      <list_type>string</list_type>
-      <default>[]</default>
-      <locale name="C">
-        <short>Cached information about delegator accounts</short>
-      </locale>
-    </schema>
-
-  </schemalist>  
-</gconfschemafile>
