@@ -1,3 +1,12 @@
+2004-06-10  Dan Winship  <danw@novell.com>
+
+	* storage/exchange-config-listener.c (add_defaults_for_account,
+	remove_defaults_for_account): Remove a lot of dead code
+
+	* storage/apps_evolution_exchange.schemas: No longer relevant
+
+	* storage/Makefile.am: remove gconf schema bits
+
 2004-06-07  Sushma Rai  <rsushma@novell.com>
 
 	* storage/exchange-hierarchy-favorites.c (remove_folder):
